syntax = "proto3";

package room;

service RoomService {
  rpc GetRoom(GetRoomRequest) returns (GetRoomResponses);
}

message GetRoomRequest {
  string roomId = 1;
}

message GetRoomResponse {
  string _id = 1;
  string name = 2;
  string roomType = 3;
  string createdAt = 4;
  string createdBy = 5;
}

message GetRoomResponses {
  repeated GetRoomResponse roomData = 1;
}